_sass/_content.scss
.content {
  p, ul, ol, table, img, .highlighter-rouge {
    @extend .site-width;
    margin-top: 1.5rem;
  }

  h1, h2, h3, h4, h5, h6{
    @extend .site-width;
    margin-top: 3rem;
  }

  blockquote {
    p {
      padding-left: 1rem;
      border-left: 0.4rem solid $separator-color;
      border-radius: 2px;
      font-style: italic;
      font-weight: bold;
    }
  }

  img{
    border: 1px solid #e9e9e9;
  }
}

